Details
-
Bug
-
Resolution: Done
-
P2: Important
-
None
-
5.6.1, 5.7.0
-
Ubuntu 16.04
Description
1) On Windows, when a modifier key, such as Shift is pressed, new DragMove event is generated. macOS should behave the same way too (I did not test myself).
2) On Linux, dragging simply ignores all key events (except esc) and updates modifier state only after moving mouse when holding a key down. Dropping seems to notice modifier keys.
To reproduce:
- Run attached application
- start dragging the circle and stop
- press shift, ctrl or alt
-> nothing happens (no move event)
Instead it should probably behave like on other platforms.
Attachments
Issue Links
- relates to
-
QTBUG-69230 Drag and drop state not updated on keyboard modifiers changes
-
- Closed
-
-
QTBUG-82934 drop action (and cursor) are not updated when changing modifier without moving the mouse
-
- Closed
-
For Gerrit Dashboard: QTBUG-56218 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
298921,5 | QBasicDrag: Send QDragMoveEvent when modifiers change | dev | qt/qtbase | Status: MERGED | +2 | 0 |
301022,2 | QBasicDrag: Send QDragMoveEvent when modifiers change | 5.15 | qt/qtbase | Status: MERGED | +2 | 0 |